--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ALI ABOUDOOH</title>
-    <link rel="stylesheet" href="../ALI ABOUDOOh/Css/main.css">
-    <link rel="stylesheet" href="../ALI ABOUDOOh/Css/all.min.css">
+    <link rel="stylesheet" href="/ALI ABOUDOOh/Css/main.css">
+    <link rel="stylesheet" href="/ALI ABOUDOOh/Css/all.min.css">
 </head>
 <body>
     <header>
